--- a/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.scss
+++ b/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.scss
@@ -1,3 +1,4 @@
+@use '@elvia/elvis/src/utilities/helpers.scss';
 @import '../../../shared/shared-animations';
 @import '@elvia/elvis/src/utilities/breakpoints.scss';
 
@@ -230,7 +231,7 @@ $maxIconContainerMobile: 450px;
 
         font-family: 'Red Hat Display', Verdana, sans-serif;
         font-weight: 500;
-        font-size: 14px;
+        font-size: helpers.toRem(14);
         line-height: 16px;
       }
       .copy-text.hide {
