--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.scss
@@ -1,6 +1,8 @@
+@use '@elvia/elvis/src/utilities/helpers.scss';
+
 .e-list {
   .prop-element-title {
-    font-size: 14px;
-    line-height: 22px;
+    font-size: helpers.toRem(14);
+    line-height: 157.14%;
   }
 }
