--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-v1/iframe-screen/iframe-screen.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-v1/iframe-screen/iframe-screen.component.scss
@@ -1,3 +1,4 @@
+@use '@elvia/elvis/src/utilities/helpers.scss';
 iframe {
   width: 100%;
   height: 100%;
@@ -67,7 +68,7 @@ iframe {
     position: absolute;
     top: 15px;
     font-family: 'Red Hat Display', Verdana, sans-serif;
-    font-size: 14px;
+    font-size: helpers.toRem(14);
     font-weight: 700;
   }
   &__elvia {
