--- a/packages/web/src/app/shared/component-documentation/component-properties/component-properties.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-properties/component-properties.component.scss
@@ -1,7 +1,8 @@
+@use '@elvia/elvis/src/utilities/helpers.scss';
 .e-list {
   .prop-element-title {
-    font-size: 14px;
-    line-height: 22px;
+    font-size: helpers.toRem(14);
+    line-height: 157.14%;
   }
   li::before {
     top: 16px;
