--- a/packages/web/src/app/shared/copy/copy.component.scss
+++ b/packages/web/src/app/shared/copy/copy.component.scss
@@ -1,3 +1,4 @@
+@use '@elvia/elvis/src/utilities/helpers.scss';
 .e-tooltip {
   display: inline-flex;
   &:first-child {
@@ -16,8 +17,8 @@
   }
 
   &__content {
-    line-height: 120%;
-    font-size: 16px;
+    line-height: 1.2;
+    font-size: helpers.toRem(16);
   }
 
   .copy-content {
