--- a/packages/web/src/app/shell/header/search-menu/search-menu.component.scss
+++ b/packages/web/src/app/shell/header/search-menu/search-menu.component.scss
@@ -1,3 +1,4 @@
+@use '@elvia/elvis/src/utilities/helpers.scss';
 @import '../header.component.scss';
 @import '@elvia/elvis/src/utilities/breakpoints.scss';
 
@@ -121,8 +122,8 @@
       font-family: 'Red Hat Text', Verdana, sans-serif;
       font-style: normal;
       font-weight: 400;
-      font-size: 16px;
-      line-height: 22px;
+      font-size: helpers.toRem(16);
+      line-height: 137.5%;
 
       &.e-search--global {
         display: flex;
@@ -144,8 +145,8 @@
           input:focus,
           input:disabled {
             font-family: 'Red Hat Text', Verdana, sans-serif;
-            font-size: 24px;
-            line-height: 38px;
+            font-size: helpers.toRem(24);
+            line-height: 158.33%;
             padding: 0;
             border-radius: 0;
             border: 1px solid transparent;
@@ -196,8 +197,8 @@
     margin-top: 64px;
 
     font-family: 'Red Hat Text', Verdana, sans-serif;
-    font-size: 20px;
-    line-height: 32px;
+    font-size: helpers.toRem(20);
+    line-height: 1.6;
   }
 
   .results {
@@ -239,8 +240,8 @@
         .title {
           font-family: 'Red Hat Display', Verdana, sans-serif;
           font-weight: 700;
-          font-size: 18px;
-          line-height: 22px;
+          font-size: helpers.toRem(18);
+          line-height: 122.22%;
         }
         .e-label {
           cursor: pointer;
@@ -253,8 +254,8 @@
         font-family: 'Red Hat Text', Verdana, sans-serif;
         font-style: normal;
         font-weight: 400;
-        font-size: 16px;
-        line-height: 28px;
+        font-size: helpers.toRem(16);
+        line-height: 1.75;
         color: var(--e-grey-80);
       }
     }
