--- a/packages/web/src/app/shell/main/main.component.scss
+++ b/packages/web/src/app/shell/main/main.component.scss
@@ -1,3 +1,4 @@
+@use '@elvia/elvis/src/utilities/helpers.scss';
 @import '@elvia/elvis/src/utilities/breakpoints.scss';
 @import '@elvia/elvis/src/utilities/colors.scss';
 @import '../../shared/shared-sizes.scss';
@@ -17,7 +18,7 @@
   }
 }
 .not-landing-page {
-  margin-left: 100px;
+  /* margin-left: 100px; */
   @media (max-width: 1632px) {
     margin-left: calc(13% + 72px + 48px);
   }
@@ -63,9 +64,9 @@
     }
     .feedback-text {
       font-family: 'Red Hat Display', Verdana, sans-serif;
-      font-size: 14px;
+      font-size: helpers.toRem(14);
       font-weight: 500;
-      line-height: 16px;
+      line-height: 114.29%;
     }
   }
 }
