--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -2880,23 +2880,40 @@ input:focus {
   color: #515151;
   padding: 12px 16px;
 }
-@keyframes eInputLoadingAnimation {
-  from {
-    --e-input---loading-angle: 0deg;
+@supports (background: paint(something)) {
+  @keyframes eInputLoadingAnimation {
+    from {
+      --e-input---loading-angle: 0deg;
+    }
+    to {
+      --e-input---loading-angle: 180deg;
+    }
   }
-  to {
-    --e-input---loading-angle: 180deg;
+  .e-input.e-input---loading > input:not(:focus),
+.e-input.e-input---loading > textarea:not(:focus) {
+    padding: 11px 15px;
+    border: double 2px transparent;
+    border-radius: 4px;
+    background-image: linear-gradient(#fff, #fff), linear-gradient(var(--e-input---loading-angle), #29d305, transparent 35% 65%, #29d305);
+    background-origin: border-box;
+    background-clip: padding-box, border-box;
+    animation: 1.7s eInputLoadingAnimation cubic-bezier(0.95, 0.05, 0.05, 0.95) infinite;
   }
 }
-.e-input.e-input---loading > input:not(:focus),
+@supports not (background: paint(something)) {
+  @keyframes eInputLoadingAnimation {
+    from {
+      border-color: #29d305;
+    }
+    to {
+      border-color: rgba(41, 211, 5, 0.1);
+    }
+  }
+  .e-input.e-input---loading > input:not(:focus),
 .e-input.e-input---loading > textarea:not(:focus) {
-  padding: 11px 15px;
-  border: double 2px transparent;
-  border-radius: 4px;
-  background-image: linear-gradient(#fff, #fff), linear-gradient(var(--e-input---loading-angle), #29d305, transparent 35% 65%, #29d305);
-  background-origin: border-box;
-  background-clip: padding-box, border-box;
-  animation: 1.7s eInputLoadingAnimation cubic-bezier(0.95, 0.05, 0.05, 0.95) infinite;
+    border: double 2px #29d305;
+    animation: 1s eInputLoadingAnimation ease alternate infinite;
+  }
 }
 .e-input input[type=date]::-webkit-calendar-picker-indicator,
 .e-input input[type=time]::-webkit-calendar-picker-indicator {
