--- a/packages/elvis/percy/components/input.html
+++ b/packages/elvis/percy/components/input.html
@@ -152,5 +152,39 @@
         </div>
       </div>
     </div>
+
+    <div class="e-mt-16">
+      <div class="e-title-xs e-my-16">Loading state</div>
+      <div class="e-form-field e-mb-32">
+        <label class="e-form-field__label" for="normal">Normal loading</label>
+        <div class="e-input e-input---loading">
+          <input id="normal" type="text" placeholder="Placeholder text" />
+        </div>
+      </div>
+      <div style="width: 240px">
+        <div class="e-form-field e-form-field--compact">
+          <label class="e-form-field__label" for="compact">Compact loading</label>
+          <div class="e-input e-input---loading">
+            <input id="compact" type="text" placeholder="Placeholder text" />
+          </div>
+        </div>
+      </div>
+      <div class="e-form-field e-mt-32">
+        <label class="e-form-field__label e-form-field__label--optional" for="textarea">
+          Normal loading textarea
+        </label>
+        <div class="e-input e-input---loading">
+          <textarea id="textarea" placeholder="Placeholder text" type="text"></textarea>
+        </div>
+      </div>
+      <div class="e-form-field e-form-field--compact e-mt-32">
+        <label class="e-form-field__label e-form-field__label--optional" for="textarea">
+          Compact loading textarea
+        </label>
+        <div class="e-input e-input---loading">
+          <textarea id="textarea" placeholder="Placeholder text" type="text"></textarea>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
