--- a/packages/web/src/app/doc-pages/components/forms/input-doc/input-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/input-doc/input-doc.component.html
@@ -111,6 +111,29 @@
           <app-component-example-v1 [codeHTML]="readonlyExample"></app-component-example-v1>
         </ng-container>
       </app-component-subsection>
+
+      <app-component-subsection [sectionTitle]="'Loading'">
+        <ng-container ngProjectAs="sectionContent">
+          The
+          <span class="code-text">e-input---loading</span>
+          class should be added to indicate that the text field is loading, for instance if the current value
+          is being validated.
+          <app-component-example-v1 [codeHTML]="loadingExample"></app-component-example-v1>
+          <div class="e-alert e-alert--info e-mt-16" role="alert">
+            <div class="e-alert__icon">
+              <i class="e-icon e-icon--information_circle e-icon--color-grey" aria-hidden="true"></i>
+            </div>
+            <div class="e-alert__content">
+              <div class="e-alert__text">
+                <div>
+                  The loading animation may look different on different browsers due to discrepancies in
+                  supported CSS functionality.
+                </div>
+              </div>
+            </div>
+          </div>
+        </ng-container>
+      </app-component-subsection>
     </ng-container>
   </app-component-section>
 
