--- a/packages/elvis/src/components/form/input.scss
+++ b/packages/elvis/src/components/form/input.scss
@@ -156,6 +156,7 @@ $form-input-padding-compact-active: 3px 9px;
     &.e-input---loading {
       > input:not(:focus),
       > textarea:not(:focus) {
+        padding: $form-input-padding-active;
         border: solid 2px colors.color('elvia-charge');
         animation: 1s eInputLoadingAnimation ease alternate infinite;
       }
