--- a/packages/elvis/src/components/link.scss
+++ b/packages/elvis/src/components/link.scss
@@ -95,7 +95,7 @@ $grey-ten: colors.color('grey-10');
     display: inline;
     font-size: inherit;
     font-weight: 500;
-    line-height: 100%;
+    line-height: 1;
   }
 
   // DEPRECATED
