--- a/packages/elvis/src/components/autcomplete.scss
+++ b/packages/elvis/src/components/autcomplete.scss
@@ -3,8 +3,8 @@
 @use '../variables/colors';
 @use '../utilities/helpers.scss';
 
-$autocomplete-padding-item: 12px 16px;
-$autocomplete-padding-item-compact: 6px 10px;
+$autocomplete-padding-item: 10px 16px;
+$autocomplete-padding-item-compact: 9px 10px;
 
 .e-autocomplete {
   position: absolute;
@@ -48,6 +48,7 @@ $autocomplete-padding-item-compact: 6px 10px;
       &__item {
         padding: $autocomplete-padding-item-compact;
         @include typography.typography('text-sm');
+        line-height: 22px;
       }
     }
   }
