fileUpload now uses text.md

--- a/packages/elvis/src/components/form/fileupload.scss
+++ b/packages/elvis/src/components/form/fileupload.scss
@@ -19,7 +19,7 @@
   }
 
   &__description {
-    @include typography.typography('text-option');
+    @include typography.typography('text-md');
     line-height: 28px;
     color: colors.color('font-color');
     display: flex;
