--- a/packages/elvis/src/components/tooltip.scss
+++ b/packages/elvis/src/components/tooltip.scss
@@ -37,7 +37,7 @@ $tooltip-padding: 8px 10px;
     transition: 250ms;
 
     font-family: 'Red Hat Text', Verdana, sans-serif;
-    font-size: helpers.toRem(14);
+    font-size: 14px;
     font-weight: 400;
     line-height: 19px;
     letter-spacing: 0.002em;
