--- a/packages/elvis/src/components/list.scss
+++ b/packages/elvis/src/components/list.scss
@@ -19,7 +19,7 @@ $mobile-line-height: calc(1.125rem * 1.6);
   margin-block-start: 0;
   margin-block-end: 0;
   margin: 0;
-  font-size: 1rem;
+  /* font-size: 1rem; */
   text-align: left;
   box-sizing: border-box;
 
