--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -5398,13 +5398,6 @@ input:focus {
   margin-block-start: 0;
   margin-block-end: 0;
   margin: 0;
-  /* font-size: 1rem; */
-  text-align: left;
-  box-sizing: border-box;
-}
-.e-list.e-list--icons .e-list:not(.e-list--numbers) li,
-.e-list.e-list--icons .e-list:not(.e-list--icons) li, .e-list.e-list--numbers .e-list:not(.e-list--numbers) li,
-.e-list.e-list--numbers .e-list:not(.e-list--icons) li, .e-list li {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 1.25rem;
   line-height: 160%;
@@ -5413,17 +5406,21 @@ input:focus {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  text-align: left;
+  box-sizing: border-box;
+}
+@media (max-width: 767px) {
+  .e-list {
+    font-size: 1.125rem;
+  }
+}
+.e-list.e-list--icons .e-list:not(.e-list--numbers) li,
+.e-list.e-list--icons .e-list:not(.e-list--icons) li, .e-list.e-list--numbers .e-list:not(.e-list--numbers) li,
+.e-list.e-list--numbers .e-list:not(.e-list--icons) li, .e-list li {
   list-style: none;
   position: relative;
   padding-left: 24px;
   margin: 0.5rem 0;
-}
-@media (max-width: 767px) {
-  .e-list.e-list--icons .e-list:not(.e-list--numbers) li,
-.e-list.e-list--icons .e-list:not(.e-list--icons) li, .e-list.e-list--numbers .e-list:not(.e-list--numbers) li,
-.e-list.e-list--numbers .e-list:not(.e-list--icons) li, .e-list li {
-    font-size: 1.125rem;
-  }
 }
 .e-list.e-list--icons .e-list:not(.e-list--numbers) li::before,
 .e-list.e-list--icons .e-list:not(.e-list--icons) li::before, .e-list.e-list--numbers .e-list:not(.e-list--numbers) li::before,
