--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -7869,11 +7869,11 @@ input:focus {
 .e-form-field.e-form-field--compact .e-form-field__label {
   position: absolute;
   z-index: 1;
-  top: 1px;
+  top: 0;
   left: 8px;
   background-color: #fff;
-  padding: 0 3px 1px;
-  height: 10px;
+  padding: 0 3px;
+  height: 12px;
   font-family: "Red Hat Text", Verdana, sans-serif;
   font-weight: 500;
   font-size: 10px;
