--- a/packages/elvis/src/components/form/field.scss
+++ b/packages/elvis/src/components/form/field.scss
@@ -77,11 +77,11 @@
     .e-form-field__label {
       position: absolute;
       z-index: 1;
-      top: 1px;
+      top: 0;
       left: 8px;
       background-color: colors.color('elvia-on');
-      padding: 0 3px 1px;
-      height: 10px;
+      padding: 0 3px;
+      height: 12px;
 
       font-family: 'Red Hat Text', Verdana, sans-serif;
       font-weight: 500;
