--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,20 +5,7 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <div class="e-form-field e-form-field--compact">
-        <label class="e-form-field__label" for="normalLoading">Loading</label>
-        <div class="e-input e-input---loading">
-          <input id="normalLoading" type="text" placeholder="Placeholder text" />
-        </div>
-      </div>
-      <div class="e-form-field e-form-field--compact">
-        <label class="e-form-field__label" for="normalLoading">Loading</label>
-        <div class="e-input">
-          <input id="normalLoading" type="text" placeholder="Placeholder text" />
-        </div>
-      </div>
-    </div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
