--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -2802,6 +2802,7 @@ input:focus {
   background: #fff;
   max-width: 448px;
   width: 100%;
+  margin: 0;
   padding: 12px 16px;
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
@@ -7873,7 +7874,7 @@ input:focus {
   left: 8px;
   background-color: #fff;
   padding: 0 3px;
-  height: 12px;
+  height: 11px;
   font-family: "Red Hat Text", Verdana, sans-serif;
   font-weight: 500;
   font-size: 10px;
